# AI-Agent_Blog-planner-and-writer

./: .env  README.md
ai-blog-agent-template/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
ai-blog-agent-template/.github/workflows/: ci.yml
ai-blog-agent-template/app/: streamlit_app.py
ai-blog-agent-template/eval/: prompts.jsonl  run_eval.py
ai-blog-agent-template/examples/: example_blog.md  example_evidence.json  example_plan.json
ai-blog-agent-template/src/blog_agent/: __init__.py  config.py  graph.py  llm.py  schemas.py
ai-blog-agent-template/src/blog_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ai-blog-agent-template/src/blog_agent/nodes/: orchestrator.py  reducer.py  research.py  router.py  worker.py
ai-blog-agent-template/src/blog_agent/prompts/: image_planner.md  planner.md  reducer.md  router.md  worker.md
ai-blog-agent-template/src/blog_agent/tools/: image_gen.py  tavily_search.py
ai-blog-agent-template/src/blog_agent/utils/: io.py  logging.py  markdown.py
ai-blog-agent-template/tests/: test_smoke.py
